fix button alignment

--- a/src/inspect_ai/_view/www/App.css
+++ b/src/inspect_ai/_view/www/App.css
@@ -708,7 +708,7 @@ table.table.table-sm td {
 
 .tab-tools .btn {
   font-size: 0.7rem;
-  padding: 0.4em 0.8em;
+  padding: 0.2em 0.8em;
 }
 
 .tab-tools {
